<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizScreen">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#302B2B"
        android:padding="5dp"
        android:shrinkColumns="1,2,3"
        android:stretchColumns="1,2,3">

        <TableRow
            android:id="@+id/definitionRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/definitionTextView"
                android:layout_width="match_parent"
                android:layout_height="235dp"
                android:layout_span="5"
                android:autoSizeMaxTextSize="21sp"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:text="@string/definitionText"
                android:textColor="#EFD1D1"
                android:textSize="25sp" />

        </TableRow>

        <TableRow
            android:id="@+id/answerRow1"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:paddingTop="15dp"
            android:paddingBottom="3dp">

            <Button
                android:id="@+id/answerButton1"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_span="5"
                android:autoSizeMaxTextSize="25sp"
                android:autoSizeMinTextSize="13sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/rounded_button"
                android:text="@string/answer1Text" />

        </TableRow>

        <TableRow
            android:id="@+id/answerRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="3dp">

            <Button
                android:id="@+id/answerButton2"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_span="5"
                android:autoSizeMaxTextSize="25sp"
                android:autoSizeMinTextSize="13sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/rounded_button"
                android:backgroundTint="#7E4CA0"
                android:radius="140dp"
                android:text="@string/answer2Text"
            />

        </TableRow>

        <TableRow
            android:id="@+id/answerRow3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="3dp">

            <Button
                android:id="@+id/answerButton3"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_span="5"
                android:autoSizeMaxTextSize="25sp"
                android:autoSizeMinTextSize="13sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/rounded_button"
                android:backgroundTint="#7E4CA0"
                android:text="@string/answer3Text"
            />

        </TableRow>

        <TableRow
            android:id="@+id/answerRow4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="3dp">

            <Button
                android:id="@+id/answerButton4"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_span="5"
                android:autoSizeMaxTextSize="25sp"
                android:autoSizeMinTextSize="13sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/rounded_button"
                android:backgroundTint="#7E4CA0"
                android:text="@string/answer4Text"
            />

        </TableRow>

        <TableRow
            android:id="@+id/scoreRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/nameView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_span="2"
                android:autoSizeMaxTextSize="34sp"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:text="@string/nameDefault"
                android:textColor="#D4D0D0"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/scoreTextView"
                android:layout_width="wrap_content"
                android:layout_height="95dp"
                android:layout_column="2"
                android:layout_span="1"
                android:gravity="center|start"
                android:text="@string/scoreText"
                android:textColor="#D5D1D1"
                android:textSize="30sp" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/backButton"
        android:layout_width="77dp"
        android:layout_height="45dp"
        android:height="55sp"
        android:backgroundTint="#D74242"
        android:gravity="center|center_horizontal"
        android:text="@string/backText"
        android:textColor="#0C0C0C" />

</androidx.constraintlayout.widget.ConstraintLayout>