<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#302B2B"
        android:padding="5dp"
        android:shrinkColumns="1,2,3"
        android:stretchColumns="1,2,3">

        <TableRow
            android:id="@+id/HeaderRow"
            android:layout_width="match_parent"
            android:layout_height="75dp">

            <TextView
                android:id="@+id/welcomeView"
                android:layout_width="401dp"
                android:layout_height="149dp"
                android:gravity="center"
                android:text="@string/welcomeMessage"
                android:textColor="#D74242"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:id="@+id/EnterNameRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/enterNameView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enterNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#C4EFDFDF"
                    android:gravity="center"
                    android:hint="@string/enterNameString"
                    android:maxHeight="80sp"
                    android:textColor="#7E4CA0" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow
            android:id="@+id/SpacerRow"
            android:layout_width="match_parent"
            android:layout_height="62dp">

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="310dp" />

        </TableRow>

        <TableRow
            android:id="@+id/bottomButtonRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="210dp"
                android:backgroundTint="#D74242"
                android:text="@string/startQuizText"
                android:textColor="#000000"
                android:textSize="32sp" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>